--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 3.052rem;
+  font-size: 4.052rem;
   font-weight: 900;
   letter-spacing: -1.8px;
 
@@ -59,6 +59,10 @@ small {
 .text {
   &--emphasis {
     font-weight: 600;
+  }
+
+  &--italic {
+    font-style: italic;
   }
 
   &--light-blue {
