--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -4,6 +4,7 @@
 }
 
 .btn {
+  cursor: pointer;
   border-radius: 100vh;
   padding: 7px 15px;
   letter-spacing: -0.1px;
@@ -71,6 +72,16 @@
     .btn__chevron path {
       stroke: var(--primary-color);
     }
+  }
+
+  &--form {
+    grid-column: 1/3;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    max-width: none;
+    padding: 1rem 0;
+    border-radius: 5px;
   }
 
   &--as-c {
