--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -9,42 +9,107 @@ form {
   border-radius: 10px;
 }
 
-.fieldset {
+label {
   position: relative;
 }
 
-input, select {
-  width: 100%;
-  padding: 10px;
-  border: 0;
-  border-top: 1px solid #CCD8E5;
-  background-color: white;
-  border-radius: 0 0 5px 5px;
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+
+  &:checked + label {
+    color: var(--primary-color);
+    background-color: var(--blue-200);
+  }
+
+  &:focus + label {
+    outline: 1px solid var(--blue-900);
+    outline-offset: -1px;
+  }
+}
+
+.fieldset__order,
+.fieldset__message {
+  display: none;
+}
+
+#inquiry:checked .fieldset__message {
+  display: flex;
 }
 
 select {
- height: 36px;
- padding-left: 7px;
+  height: 36px;
+  padding-left: 7px;
 }
 
 input:focus,
-select:focus {
+select:focus,
+textarea:focus {
   outline: 1px solid var(--blue-900);
   outline-offset: -1px;
 }
 
-input::placeholder {
-  color: #9CB2CA;
+input::placeholder,
+textarea::placeholder {
+  color: #9cb2ca;
 }
 
-label {
+textarea {
+  font-family: Inter, Roboto, sans-serif;
+  resize: vertical;
+}
+
+.fieldset {
   position: relative;
-  font-size: 12px;
-  font-weight: 600;
-  left: 0;
-  background-color: #F0F7FF;
-  color: #4D6E90;
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px 5px 0 0;
+
+  &__label {
+    position: relative;
+    font-size: 12px;
+    font-weight: 600;
+    left: 0;
+    background-color: #f0f7ff;
+    color: #4d6e90;
+    padding: 10px;
+    width: 100%;
+    border-bottom: 1px solid var(--cool-gray-300);
+    border-radius: 5px 5px 0 0;
+  }
+
+  &__text,
+  &__select {
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    background-color: white;
+    border-radius: 0 0 5px 5px;
+  }
+
+  &__radio {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding: 0.5rem 0;
+    font-size: 0.9rem;
+    text-align: center;
+    background-color: white;
+    color: var(--cool-gray-400);
+
+    &--add-border {
+      border-right: 1px solid var(--cool-gray-300);
+      border-left: 1px solid var(--cool-gray-300);
+    }
+
+    &--add-br-radius {
+      border-radius: 0 0 5px 0;
+    }
+
+    &--add-bl-radius {
+      border-radius: 0 0 0 5px;
+    }
+  }
+
+  &__full-width {
+    grid-column: 1/3;
+  }
 }
