--- a/app/scss/sections/_faq.scss
+++ b/app/scss/sections/_faq.scss
@@ -13,7 +13,8 @@
     &-list-item {
       padding-left: 1.5rem;
 
-      &--active {
+      &--active {    
+        padding-left: calc(1.5rem - 3px);
         color: var(--primary-color);
         border-left: 3px solid var(--primary-color);
       }
