--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -8,7 +8,7 @@
   &__body {
     max-width: 30ch;
     font-size: 0.9rem;
-    color: var(--cool-gray-400);
+    color: var(--blue-100);
   }
 
   &__logo {
