--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -134,7 +134,7 @@
   &__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
     gap: 1rem;
   }
 
