--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @use "base/colors";
 @use "base/globals";
 @use "base/typography";
+@use "base/images";
 @use "utils/flex";
 @use "utils/spacing";
 @use "components/buttons";
