restructured h1-6 to match accessibility standards

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -8,15 +8,27 @@ h1 {
   }
 }
 
+// h2 {
+//   font-size: 2.441rem;
+//   font-weight: 700;
+//   letter-spacing: -1px;
+// }
+
 h2 {
-  font-size: 2.441rem;
-  font-weight: 700;
-  letter-spacing: -1px;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: -0.1px;
 }
 
+// h3 {
+//   font-size: 1.953rem;
+//   font-weight: 700;
+//   letter-spacing: -1px;
+// }
+
 h3 {
-  font-size: 1.953rem;
-  font-weight: 700;
+  font-size: 1.563rem;
+  font-weight: 600;
   letter-spacing: -1px;
 }
 
@@ -48,12 +60,6 @@ small {
   font-size: 0.75rem;
   font-weight: 500;
   letter-spacing: -0.1px;
-}
-
-.title-group {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 }
 
 .text {
