--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -17,6 +17,8 @@
 
   &__heading {
     max-width: 17ch;
+    font-size: 1.563rem;
+    font-weight: 600;
     line-height: 1.2;
   }
 
@@ -35,7 +37,9 @@
 
 .minipod {
   &__heading {
+    font-size: 2.441rem;
     line-height: 1.1;
+    letter-spacing: -1px;
   }
 
   &__body {
@@ -134,6 +138,7 @@
   }
 
   &__subheading {
+    font-weight: 600;
     color: var(--blue-200);
   }
 
@@ -162,6 +167,10 @@
     max-width: 1080px;
     margin: 0 auto;
     padding: 7rem 2rem;
+  }
+
+  &__heading {
+    font-size: 2.441rem;
   }
 
   &__subheading {
@@ -215,7 +224,6 @@
   .list-item {
     &__body {
       font-weight: 500;
-      font-style: italic;
       color: var(--blue-100);
     }
 
@@ -225,6 +233,8 @@
     }
 
     &__heading {
+      font-size: 1.25rem;
+      font-weight: 600;
       line-height: 1.1;
     }
 
@@ -309,8 +319,10 @@
 
   &__heading {
     font-size: 3rem;
+    font-weight: 900;
     line-height: 1;
-    margin-top: 15px;
+    letter-spacing: -1.5px;
+    margin-top: 17px;
   }
 
   &__passive {
