--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -57,7 +57,7 @@
   }
 
   &--primary {
-    background-color: var(--primary-color);
+    background-color: var(--blue-600);
     color: var(--blue-100);
 
     .btn__chevron path {
@@ -66,10 +66,10 @@
   }
 
   &--secondary {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--blue-600);
 
     .btn__chevron path {
-      stroke: var(--primary-color);
+      stroke: var(--blue-600);
     }
   }
 
@@ -83,10 +83,10 @@
 
   &--white {
     background-color: var(--blue-100);
-    color: var(--primary-color);
+    color: var(--blue-600);
 
     .btn__chevron path {
-      stroke: var(--primary-color);
+      stroke: var(--blue-600);
     }
   }
 
