major updates to code, imgs / created mobile nav

--- a/app/scss/base/_images.scss
+++ b/app/scss/base/_images.scss
@@ -1,13 +1,13 @@
 .icon {
   &--sm {
-    max-width: 22px;
+    width: 22px;
   }
 
   &--md {
-    max-width: 36px;
+    width: 36px;
   }
 
   &--lg {
-    max-width: 52px;
+    width: 58px;
   }
 }
