--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -29,6 +29,15 @@ input[type="radio"] {
   }
 }
 
+.form {
+  margin-bottom: 10vh;
+  padding: 0 2rem;
+
+  &__container {
+    max-width: 590px;
+  }
+}
+
 .fieldset__order,
 .fieldset__message {
   display: none;
@@ -79,6 +88,7 @@ textarea {
   &__text,
   &__select {
     width: 100%;
+    height: 100%;
     padding: 10px;
     border: 0;
     background-color: white;
