--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,20 +1,40 @@
 .header {
-  padding: 2rem;
-  max-width: 1080px;
-  margin: 2rem auto 0;
+  position: sticky;
+  max-width: 100%;
+  top: 0;
+  z-index: 9999;
+  background: hsl(0deg 0% 100% / 90%);
+  box-shadow: 0 2px 32px -12px hsla(213, 78%, 16%, 0.15);
+  backdrop-filter: blur(5px);
 }
 
 .navbar {
   max-width: 1080px;
+  padding: 1.25rem 2rem;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: padding 150ms ease-in;
+
+  &__overlay {
+    content: "";
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    left: -100vw;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    background-color: hsla(213, 78%, 8%, 0.9);
+    transition: opacity 300ms ease-in;
+  }
 
   &__logo {
     display: block;
-    width: 150px;
-    min-width: 150px;
+    width: 120px;
+    min-width: 120px;
   }
 
   &__links {
@@ -24,7 +44,28 @@
     font-weight: 600;
 
     @media (max-width: 992px) {
-      display: none;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      z-index: 1000;
+      flex-direction: column;
+      gap: 3rem;
+      width: 45vw;
+      height: 100vh;
+      padding: min(30vh, 10rem) 2rem;
+      transform: translateX(100%);
+      background-color: hsla(0, 0, 100%, 0.98);
+      backdrop-filter: blur(1px);
+      transition: transform 300ms ease-in;
+    }
+
+    &[data-visible="true"] {
+      transform: translateX(0);
+
+      .navbar__overlay {
+        opacity: 1;
+      }
     }
   }
 
@@ -35,6 +76,42 @@
 
     &:hover {
       color: var(--primary-color);
+    }
+  }
+
+  &__hamburger {
+    display: none;
+    z-index: 9999;
+    aspect-ratio: 1;
+    background: none;
+    border: none;
+    width: 22px;
+    height: 22px;
+    padding: 0;
+
+    .line {
+      height: 2px;
+      width: 100%;
+      transform-origin: left;
+      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+      background-color: var(--cool-gray-400);
+    }
+
+    @media (max-width: 992px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 0.3rem;
+    }
+
+    &[aria-expanded="true"] {
+      .line-1 {
+        transform: rotate(45deg) translate(0px, -4px);
+      }
+
+      .line-2 {
+        transform: rotate(-45deg) translate(-2px, 6px);
+      }
     }
   }
 
@@ -148,18 +225,8 @@
       color: var(--cool-gray-600);
     }
   }
+}
 
-  &__hamburger {
-    display: none;
-
-    svg path {
-      stroke: var(--cool-gray-400);
-      stroke-width: 2;
-      stroke-linecap: round;
-    }
-
-    @media (max-width: 992px) {
-      display: block;
-    }
-  }
+.no-padding {
+  padding: 1rem 2rem;
 }
