--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-  margin-top: 10vh;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -7,6 +6,14 @@
 
   @media (max-width: 425px) {
     gap: 2rem;
+  }
+
+  &__main {
+    padding: 9rem 2rem 12rem;
+  }
+
+  &__feature {
+    padding: 6rem 2rem 12rem;
   }
 
   &__text {
