--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @use "base/images";
 @use "utils/flex";
 @use "utils/spacing";
+@use "utils/utilities";
 @use "components/buttons";
 @use "components/minipod";
 @use "components/hero";
