--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -36,9 +36,12 @@
   }
 
   &__logo {
-    display: block;
     width: 120px;
     min-width: 120px;
+
+    @media (max-width: 992px) {
+      display: flex;
+    }
   }
 
   &__links {
