--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,4 +1,9 @@
 .hero {
+  @media (max-width: 992px) {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
   &__main {
     padding: 9rem 2rem 12rem;
 
