--- a/app/scss/sections/_merch.scss
+++ b/app/scss/sections/_merch.scss
@@ -3,6 +3,14 @@
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
+
+    @media (max-width: 992px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 568px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__grid-item {
