--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -62,12 +62,14 @@
       height: 100vh;
       padding: min(30vh, 10rem) 2rem;
       transform: translateX(100%);
-      background-color: hsla(0, 0, 100%, 0.98);
-      backdrop-filter: blur(1px);
+      visibility: hidden;
+      background-color: hsla(0, 0, 100%, 0.95);
+      backdrop-filter: blur(5px);
       transition: transform 300ms ease-in;
     }
 
     &[data-visible="true"] {
+      visibility: visible;
       transform: translateX(0);
 
       .navbar__overlay {
