--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -19,6 +19,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    @media (max-width: 568px) {
+      gap: 0.5rem;
+    }
   }
 
   &__heading {
