--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -6,6 +6,14 @@
   @media (max-width: 992px) {
     padding: 4rem 2rem;
   }
+
+  @media (max-width: 568px) {
+    padding: 3rem 2rem;
+  }
+
+  @media (max-width: 375px) {
+    padding: 3rem 1rem;
+  }
 }
 
 .mtop {
