--- a/app/scss/utils/_utilities.scss
+++ b/app/scss/utils/_utilities.scss
@@ -18,3 +18,13 @@
     display: none;
   }
 }
+
+.desktop {
+  @media (max-width: 992px) {
+    display: none;
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
