--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -154,8 +154,8 @@
       height: 1000px;
     }
 
-    @media (max-width: 568px) {
-      height: 1000px;
+    @media (max-width: 768px) {
+      height: 800px;
     }
   }
 
@@ -173,7 +173,13 @@
       min-width: 35ch;
     }
 
+    @media (max-width: 768px) {
+      transform: translateY(70px);
+      min-width: auto;
+    }
+
     @media (max-width: 568px) {
+      transform: translateY(60px);
       min-width: auto;
     }
   }
@@ -197,15 +203,17 @@
 
     @media (max-width: 992px) {
       transform: translateY(175px);
+      min-width: auto;
       margin: 0 2rem;
     }
 
-    @media (max-width: 568px) {
+    @media (max-width: 768px) {
       transform: translateY(135px);
-      width: 320px;
+    }
+
+    @media (max-width: 568px) {
+      transform: translateY(115px);
       min-width: auto;
-      margin: auto;
-      box-shadow: 0px 4px 58px rgba(9, 38, 73, 0.25);
     }
 
     img {
