--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -155,7 +155,11 @@
     }
 
     @media (max-width: 768px) {
-      height: 800px;
+      height: 900px;
+    }
+
+    @media (max-width: 425px) {
+      height: 1100px;
     }
   }
 
@@ -312,10 +316,6 @@
     border-radius: 10px;
     color: white;
     box-shadow: 0 4px 12px hsla(213, 95%, 19%, 0.1), 0 3px 32px hsla(213, 38%, 36%, 0.5);
-
-    @media (max-width: 568px) {
-      box-shadow: none;
-    }
   }
 
   .list-item {
@@ -356,7 +356,11 @@
     background-color: var(--blue-900);
     padding: 3rem 6rem;
 
-    @media (max-width: 568px) {
+    @media (max-width: 992px) {
+      padding: 2rem;
+    }
+
+    @media (max-width: 768px) {
       flex-direction: column;
       padding: 2rem 3rem;
       gap: 2rem;
@@ -386,6 +390,10 @@
       font-size: 5rem;
       font-weight: 300;
       transition: transform 1s ease-out;
+
+      @media (max-width: 992px) {
+        font-size: 4.5rem;
+      }
     }
 
     &__subheading {
@@ -401,6 +409,10 @@
       letter-spacing: 2px;
       transition: transform 1s ease-out;
       text-shadow: 0px 0px 6px hsla(213, 78%, 16%, 1), 0px 4px 12px hsla(213, 78%, 16%, 1);
+      
+      @media (max-width: 992px) {
+        font-size: 0.8rem;
+      }
     }
   }
 }
@@ -412,7 +424,7 @@
     margin-top: -10rem;
     margin-bottom: 6rem;
   }
-  
+
   &__plug {
     transition: all 150ms ease-in;
   }
