home plug n play -> added responsiveness

--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
   padding: 7px 15px;
   letter-spacing: -0.1px;
   font-weight: 500;
-  max-width: fit-content;
+  max-width: max-content;
 
   &:hover {
     .btn__chevron {
