--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -123,6 +123,10 @@
       @media (max-width: 992px) {
         max-width: 45ch;
       }
+
+      @media (max-width: 568px) {
+        max-width: 30ch;
+      }
     }
 
     &--team {
