--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -319,7 +319,7 @@
     padding: 2rem;
     border-radius: 10px;
     color: white;
-    box-shadow: 0 4px 12px hsla(213, 95%, 19%, 0.1), 0 3px 32px hsla(213, 38%, 36%, 0.5);
+    box-shadow: 0 6px 12px rgb(2 44 94 / 15%), 0 6px 32px -8px rgb(0 94 213 / 50%);
   }
 
   .list-item {
@@ -417,7 +417,7 @@
       letter-spacing: 2px;
       transition: transform 1s ease-out;
       text-shadow: 0px 0px 6px hsla(213, 78%, 16%, 1), 0px 4px 12px hsla(213, 78%, 16%, 1);
-      
+
       @media (max-width: 992px) {
         font-size: 0.8rem;
       }
@@ -427,7 +427,7 @@
 
 .income {
   overflow: hidden;
-  
+
   @media (max-width: 992px) {
     position: relative;
     margin-top: -11rem;
@@ -463,8 +463,8 @@
     margin-top: 17px;
 
     @media (max-width: 992px) {
-    margin-top: 25px;
-    font-size: 2rem;
+      margin-top: 25px;
+      font-size: 2rem;
     }
   }
 
