--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -103,6 +103,10 @@
     max-width: none;
     padding: 1rem 0;
     border-radius: 5px;
+
+    @media (max-width: 568px) {
+      grid-column: 1;
+    }
   }
 
   &--as-c {
