--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -7,6 +7,14 @@
   max-width: 1080px;
   margin: -15vh auto 0;
   padding: 7rem 2rem;
+
+  @media (max-width: 992px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .card-1,
@@ -54,32 +62,49 @@
 
 .card {
   &-1 {
-    grid-area: 1 / 1 / 2 / 2;
+    order: 1;
   }
   &-2 {
-    grid-area: 1 / 2 / 2 / 3;
+    order: 2;
   }
   &-3 {
-    grid-area: 1 / 3 / 2 / 4;
+    order: 3;
   }
   &-4 {
-    grid-area: 2 / 1 / 3 / 2;
+    order: 4;
   }
   &-5 {
-    grid-area: 2 / 2 / 3 / 3;
+    order: 5;
   }
   &-6 {
-    grid-area: 2 / 3 / 3 / 4;
+    order: 6;
   }
   &-7 {
-    grid-area: 3 / 1 / 4 / 2;
+    order: 7;
   }
   &-8 {
     font-size: 1.3rem;
-    grid-area: 3 / 2 / 4 / 3;
+    order: 8;
+
+    @media (max-width: 992px) {
+      order: 9;
+      grid-column: 1/3;
+      padding: 1rem 0;
+    }
+
+    @media (max-width: 768px) {
+      grid-column: 1/2;
+    }
   }
   &-9 {
-    grid-area: 3 / 3 / 4 / 4;
+    order: 9;
+
+    @media (max-width: 992px) {
+      order: 8;
+    }
+  }
+
+  &__secondary {
   }
 
   &__list {
@@ -91,7 +116,6 @@
     font-size: 0.8rem;
     padding-left: 2.5rem;
     letter-spacing: -0.1px;
-
   }
 
   &__list-item::before {
