--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -7,6 +7,10 @@ form {
   max-width: 600px;
   padding: 2rem;
   border-radius: 10px;
+
+  @media (max-width: 568px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 label {
@@ -105,6 +109,10 @@ textarea {
     background-color: white;
     color: var(--cool-gray-400);
 
+    @media (max-width: 568px) {
+      font-size: 0.8rem;
+    }
+
     &--add-border {
       border-right: 1px solid var(--cool-gray-300);
       border-left: 1px solid var(--cool-gray-300);
@@ -119,7 +127,17 @@ textarea {
     }
   }
 
+  &__message {
+    @media (max-width: 568px) {
+      height: 150px;
+    }
+  }
+
   &__full-width {
     grid-column: 1/3;
+
+    @media (max-width: 568px) {
+      grid-column: 1;
+    }
   }
 }
