--- a/app/scss/sections/_competitors.scss
+++ b/app/scss/sections/_competitors.scss
@@ -4,7 +4,7 @@
 
   .container {
     @media (max-width: 1200px) {
-      padding: 0;
+      padding: 6rem 0;
       margin: 0;
       max-width: fit-content;
     }
