--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -127,11 +127,41 @@
     border-radius: 20px;
     padding: 3rem;
     box-shadow: 0px 12px 24px 0px hsla(213, 95%, 19%, 0.2), 0px 16px 64px 0px hsla(213, 38%, 36%, 0.35);
+
+    @media (max-width: 568px) {
+      background-position: center;
+      background-size: 50%;
+    }
   }
 
-  p {
+  &__heading {
+    font-size: 2.441rem;
+    line-height: 1.1;
+    color: var(--blue-100);
+
+    @media (max-width: 568px) {
+      margin-bottom: -0.5rem;
+      font-size: 1.953rem;
+    }
+  }
+
+  &__subheading {
+    line-height: 1.2;
+
+    emphasis {
+      margin: 0 0.2rem 0 0.1rem;
+    }
+  }
+
+  &__body {
     max-width: 45ch;
-    color: var(--blue-200);
+    color: var(--blue-100);
+
+    @media (max-width: 568px) {
+      max-width: max-content;
+      line-height: 1.3;
+      font-size: 1rem;
+    }
   }
 }
 
@@ -149,6 +179,11 @@
     @media (max-width: 568px) {
       grid-template-columns: repeat(1, 1fr);
     }
+  }
+
+  &__cta {
+    line-height: 1.2;
+    text-align: center;
   }
 
   img {
