competitor table mobile adjustments

--- a/app/scss/base/_colors.scss
+++ b/app/scss/base/_colors.scss
@@ -2,6 +2,7 @@
 
 :root {
   --primary-color: hsla(213, 75%, 54%, 1);
+  --blue-50: hsla(213, 100%, 99%, 1);
   --blue-100: hsla(213, 100%, 97%, 1);
   --blue-150: hsla(213, 100%, 95%, 1);
   --blue-200: hsla(213, 100%, 90%, 1);
