--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -363,13 +363,94 @@
 
   &__img {
     position: relative;
-    transform: translateX(3rem);
-    z-index: -1;
-    margin-bottom: -161.1px;
+    transform: translateX(0.5rem);
+    margin-bottom: -182.1px;
+    overflow: visible;
 
     @media (max-width: 568px) {
       left: 0;
       transform: translateX(40px);
+    }
+  }
+
+  &__cable {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 10s linear;
+  }
+
+  &__power {
+    transition: transform 300ms ease-out;
+    transform-origin: 25% 30%;
+
+    &:hover {
+      transform: scale(1.1);
+
+      .income__power-text {
+        transform: translateY(-50px);
+      }
+
+      .income__power-large-icon {
+        transition: fill 300ms ease-out;
+        fill: var(--warning-500);
+      }
+
+      .income__power-small-icon {
+        transition: fill 300ms ease-out;
+        fill: var(--warning-600);
+      }
+    }
+
+    &-text {
+      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    }
+  }
+
+  &__minipod {
+    transition: transform 300ms ease-out;
+    transform-origin: 45% 40%;
+
+    &:hover {
+      transform: scale(1.1);
+
+      .income__minipod-text {
+        transform: translateY(-60px);
+      }
+    }
+
+    &-text {
+      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    }
+  }
+
+  &__wallet {
+    transition: transform 300ms ease-out;
+    transform-origin: 75% 30%;
+
+    &:hover {
+      transform: scale(1.1);
+
+      .income__wallet-text {
+        transform: translateY(-60px);
+      }
+
+      .income__wallet-coin {
+        transform: translateY(30px);
+
+        path:nth-child(1) {
+          transition: fill 300ms ease-out;
+          fill: var(--warning-600);
+        }
+
+        path:nth-child(2) {
+          transition: fill 300ms ease-out;
+          fill: var(--warning-500);
+        }
+      }
+    }
+
+    &-text,
+    &-coin {
+      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
     }
   }
 
