--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -272,6 +272,9 @@
 }
 
 .stats {
+  position: relative;
+  z-index: 10;
+
   &__container {
     margin: -13.5rem auto 0;
     padding: 7rem 2rem;
@@ -367,9 +370,10 @@
     margin-bottom: -182.1px;
     overflow: visible;
 
-    @media (max-width: 568px) {
+    @media (max-width: 992px) {
       left: 0;
-      transform: translateX(40px);
+      transform: translateX(45px);
+      margin-bottom: -161px;
     }
   }
 
