--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -43,6 +43,11 @@
     width: 120px;
     min-width: 120px;
 
+    svg {
+      width: 120px;
+      height: 40px;
+    }
+
     @media (max-width: 992px) {
       display: flex;
     }
