minor changes to competitor table

--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -365,7 +365,7 @@
   }
 
   &__plug {
-    transform: translate(2px, -1px);
+    transform: translate(2px);
     transition: all 150ms ease-in;
   }
 
