--- a/app/scss/sections/_competitors.scss
+++ b/app/scss/sections/_competitors.scss
@@ -1,5 +1,5 @@
 .competitors {
-  background: linear-gradient(hsl(0deg 0% 100%) 0%, hsl(0deg 0% 100%) 27.1%, var(--blue-700) 27.1%, var(--blue-700) 100%);
+  background: linear-gradient(hsl(0deg, 0%, 100%) 0%, hsl(0deg, 0%, 100%) 26.8%, var(--blue-700) 26.8%, var(--blue-700) 100%);
   background-repeat: no-repeat;
 
   .container {
